--- a/GitHub/html/top.html
+++ b/GitHub/html/top.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oguchi Takuma Design</title>
   <link rel="icon" href="../material/logoicon.png">
-  <link rel="stylesheet" href="../css/hero.css">
+  <link rel="stylesheet" href="../css/top.css">
   <link rel="stylesheet" href="../css/5-2-2.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
