--- a/html/work.html
+++ b/html/work.html
@@ -141,6 +141,9 @@
         <span class="box fadeUpTrigger work8"><img src="../material/work/えらい.jpg" width="272"></span>
         <span class="box fadeUpTrigger work9"><img src="../material/work/chocopie.png" width="568"></span>  
       </div>
+      <p class="contents-description box fadeUpTrigger delay-time04">
+        アートや、クリエイティブに敏感な20代から30代向けのファッションブランドを想定してアプリのUIを設計しました。</p>
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FcGHFp9RK1yo2rSUIX1yvk5%2FEDGE-AESTHETIQUE%3Fpage-id%3D0%253A1%26type%3Ddesign%26node-id%3D331-2187%26viewport%3D456%252C458%252C0.03%26scaling%3Dscale-down%26starting-point-node-id%3D331%253A2187" allowfullscreen></iframe>
     </section>
   </main>
 
